# soda-sim-proto-v1

./: CMakeLists.txt  README.md  SodaSimProtoV1Config.cmake.in
cmake/: Packaging.cmake
src/: lidarSerialization.cpp  poseSerialization.cpp  radarSerialization.cpp  ultrasonicSerialization.cpp
